--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@vueuse/motion": "^2.0.0-beta.12",
     "core-js": "^3.6.5",
+    "leaflet": "^1.8.0",
     "ol": "^6.14.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
