--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ol": "^6.14.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue3-openlayers": "^0.1.68",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
