--- a/package.json
+++ b/package.json
@@ -15,7 +15,14 @@
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vue3-openlayers": "^0.1.68",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "@googlemaps/js-api-loader": "^1.14.3",
+    "axios": "^0.25.0",
+    "leaflet": "^1.8.0",
+    "primeicons": "^5.0.0",
+    "primevue": "^3.12.2",
+    "quill": "^1.3.7",
+    "vue3-openlayers": "^0.1.68"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
