--- a/package.json
+++ b/package.json
@@ -8,21 +8,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.1",
+    "@googlemaps/js-api-loader": "^1.14.3",
     "@vueuse/motion": "^2.0.0-beta.12",
+    "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "leaflet": "^1.8.0",
     "ol": "^6.14.1",
+    "primeicons": "^5.0.0",
+    "primevue": "^3.12.2",
+    "quill": "^1.3.7",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vue3-openlayers": "^0.1.68",
     "vuex": "^4.0.2",
-    "@googlemaps/js-api-loader": "^1.14.3",
-    "axios": "^0.25.0",
-    "leaflet": "^1.8.0",
-    "primeicons": "^5.0.0",
-    "primevue": "^3.12.2",
-    "quill": "^1.3.7",
-    "vue3-openlayers": "^0.1.68"
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
